# pdfio

./: CMakeLists.txt  Doxyfile.in  README.md
src/: mainpage.dox
src/pdfio/: CMakeLists.txt  file_structure.h  generic_object.h  log.cpp  log.h  pdf.h  read_generic_object.cpp  read_generic_object.h  variant.h  write_generic_object.cpp  write_generic_object.h
src/pdfio/pdf1_0/: CMakeLists.txt  array.h  destination.cpp  destination.h  dictionary.h  document_catalog.cpp  document_catalog.h  document_page.h  document_page_description.h  document_page_tree_node.h  document_page_tree_root_node.h  document_pages_tree.cpp  document_pages_tree.h  file.h  file_header.h  file_structure.cpp  file_structure.h  file_trailer.h  file_version.h  file_xref.h  generic_object.h  generic_object_type.cpp  generic_object_type.h  hexstring.h  indirect_object.h  indirect_reference.h  info.cpp  info.h  integer.h  literalstring.h  name.h  numeric.h  outline_tree.cpp  outline_tree.h  real.h  stream.cpp  stream.h  string.h  type_info.h
src/pdfio/pdf1_0/istream/: CMakeLists.txt  generic_object_readers.cpp  include.h  read_array.h  read_destination.cpp  read_destination.h  read_dictionary.cpp  read_dictionary.h  read_document_catalog.cpp  read_document_catalog.h  read_document_page.cpp  read_document_page.h  read_document_page_description.cpp  read_document_page_description.h  read_document_page_tree_root_node.cpp  read_document_page_tree_root_node.h  read_document_pages_tree.cpp  read_document_pages_tree.h  read_file.cpp  read_file.h  read_file_header.cpp  read_file_header.h  read_file_structure.cpp  read_file_structure.h  read_file_trailer.cpp  read_file_trailer.h  read_file_version.cpp  read_file_version.h  read_file_xref.cpp  read_file_xref.h  read_generic_object.cpp  read_generic_object.h  read_hexstring.cpp  read_hexstring.h  read_indirect_object.cpp  read_indirect_object.h  read_indirect_reference.cpp  read_indirect_reference.h  read_info.cpp  read_info.h  (+14 more)
src/pdfio/pdf1_0/istream/document_reader/: CMakeLists.txt  document_reader.cpp  document_reader.h  file_reader.cpp  file_reader.h  istream_pool.cpp  istream_pool.h
src/pdfio/pdf1_0/istream/facades/: CMakeLists.txt  document_reader.cpp  document_reader.h  file_reader.cpp  file_reader.h  pdfio.cpp  pdfio.h
src/pdfio/pdf1_4/: CMakeLists.txt  action.cpp  action.h  array.h  destination.h  dictionary.h  document_catalog.cpp  document_catalog.h  file_structure.cpp  file_structure.h  file_version.cpp  file_version.h  generic_object_type.cpp  generic_object_type.h  hexstring.h  indirect_object.h  indirect_reference.h  integer.h  name.h  string.h
src/pdfio/pdf1_7/: CMakeLists.txt  array.h  dictionary.h  document_catalog.h  file_header.h  file_structure.cpp  file_structure.h  file_trailer.h  filters.cpp  filters.h  generic_object_type.cpp  generic_object_type.h  hexstring.h  indirect_object.h  indirect_reference.h  integer.h  literalstring.h  name.h  name_tree.h  pdf.cpp  pdf.h  stream.h
test/: CMakeLists.txt
test/pdfio/pdf1_0/: CMakeLists.txt  pdf1_0_array_testsuite.cpp  pdf1_0_dictionary_testsuite.cpp  pdf1_0_document_catalog_testsuite.cpp  pdf1_0_document_page_testsuite.cpp  pdf1_0_document_page_tree_root_node_testsuite.cpp  pdf1_0_file_header_testsuite.cpp  pdf1_0_file_testsuite.cpp  pdf1_0_file_trailer_testsuite.cpp  pdf1_0_file_version_testsuite.cpp  pdf1_0_file_xref_testsuite.cpp  pdf1_0_generic_object_testsuite.cpp  pdf1_0_hexstring_testsuite.cpp  pdf1_0_indirect_object_testsuite.cpp  pdf1_0_indirect_reference_testsuite.cpp  pdf1_0_integer_testsuite.cpp  pdf1_0_name_testsuite.cpp  pdf1_0_real_testsuite.cpp  pdf1_0_stream_testsuite.cpp  pdf1_0_type_info_testsuite.cpp
test/pdfio/pdf1_0/istream/: CMakeLists.txt  pdf1_0_istream_array_testsuite.cpp  pdf1_0_istream_destination_testsuite.cpp  pdf1_0_istream_dictionary_testsuite.cpp  pdf1_0_istream_document_catalog_testsuite.cpp  pdf1_0_istream_document_page_testsuite.cpp  pdf1_0_istream_document_page_tree_root_node_testsuite.cpp  pdf1_0_istream_document_pages_tree.cpp  pdf1_0_istream_file_header_testsuite.cpp  pdf1_0_istream_file_structure_testsuite.cpp  pdf1_0_istream_file_testsuite.cpp  pdf1_0_istream_file_trailer_testsuite.cpp  pdf1_0_istream_file_version_testsuite.cpp  pdf1_0_istream_file_xref_testsuite.cpp  pdf1_0_istream_generic_object_testsuite.cpp  pdf1_0_istream_hexstring_testsuite.cpp  pdf1_0_istream_indirect_object_testsuite.cpp  pdf1_0_istream_indirect_reference_testsuite.cpp  pdf1_0_istream_info_testsuite.cpp  pdf1_0_istream_integer_testsuite.cpp  pdf1_0_istream_literalstring_testsuite.cpp  pdf1_0_istream_name_testsuite.cpp  pdf1_0_istream_outline_tree_testsuite.cpp  pdf1_0_istream_real_testsuite.cpp  pdf1_0_istream_stream_testsuite.cpp  pdf1_0_istream_string_testsuite.cpp  pdf1_0_istream_unittest_app.cpp  pdf1_0_stream_testsuite.cpp
test/pdfio/pdf1_0/ostream/: CMakeLists.txt  pdf1_0_ostream_dictionary_testsuite.cpp  pdf1_0_ostream_document_catalog_testsuite.cpp  pdf1_0_ostream_indirect_reference_testsuite.cpp  pdf1_0_ostream_name_testsuite.cpp  pdf1_0_ostream_unittest_app.cpp
test/pdfio/pdf1_4/istream/: CMakeLists.txt  pdf1_4_istream_action_testsuite.cpp  pdf1_4_istream_destination_testsuite.cpp  pdf1_4_istream_document_catalog_testsuite.cpp  pdf1_4_istream_file_structure_testsuite.cpp  pdf1_4_istream_file_version_testsuite.cpp  pdf1_4_istream_indirect_object_testsuite.cpp  pdf1_4_istream_unittest_app.cpp
test/pdfio/pdf1_7/: CMakeLists.txt  pdf1_7_array_testsuite.cpp  pdf1_7_file_structure_testsuite.cpp  pdf1_7_file_trailer_testsuite.cpp  pdf1_7_filters_testsuite.cpp  pdf1_7_hexstring_testsuite.cpp  pdf1_7_integer_testsuite.cpp  pdf1_7_pdf_testsuite.cpp  pdf1_7_unittest_app.cpp
test/pdfio/pdf1_7/istream/: CMakeLists.txt  pdf1_7_istream_array_testsuite.cpp  pdf1_7_istream_document_catalog_testsuite.cpp  pdf1_7_istream_file_header_testsuite.cpp  pdf1_7_istream_file_structure_testsuite.cpp  pdf1_7_istream_file_trailer_testsuite.cpp  pdf1_7_istream_indirect_object_testsuite.cpp  pdf1_7_istream_name_tree_testsuite.cpp  pdf1_7_istream_unittest_app.cpp
(+48 files in other folders)
