add_executable(pdfio_pdf1_0_istream_unittest_app pdf1_0_istream_unittest_app.cpp
  pdf1_0_istream_name_testsuite.cpp
  pdf1_0_istream_indirect_reference_testsuite.cpp
  pdf1_0_istream_dictionary_testsuite.cpp
  pdf1_0_istream_file_trailer_testsuite.cpp
  pdf1_0_istream_file_xref_testsuite.cpp
  pdf1_0_istream_file_header_testsuite.cpp
  pdf1_0_istream_file_version_testsuite.cpp
  pdf1_0_istream_file_testsuite.cpp
  pdf1_0_istream_generic_object_testsuite.cpp
  pdf1_0_istream_indirect_object_testsuite.cpp
  pdf1_0_istream_document_catalog_testsuite.cpp
  pdf1_0_istream_array_testsuite.cpp
  pdf1_0_istream_document_page_tree_root_node_testsuite.cpp
  pdf1_0_stream_testsuite.cpp
  pdf1_0_istream_document_page_testsuite.cpp
  pdf1_0_istream_hexstring_testsuite.cpp
  pdf1_0_istream_literalstring_testsuite.cpp
  pdf1_0_istream_file_structure_testsuite.cpp
)
add_dependencies(pdfio_pdf1_0_istream_unittest_app pdfio) 
target_link_libraries(pdfio_pdf1_0_istream_unittest_app gtest pdfio z)
add_test(NAME pdfio_pdf1_0_istream_unittest_app COMMAND pdfio_pdf1_0_istream_unittest_app)